# ticgithub

./: README.md  autorelease-env.sh  setup.cfg
.autorelease/: autorelease.yml  install-autorelease
.github/workflows/: assignment-to-gmail.yml  autorelease-default-env.sh  autorelease-deploy.yml  autorelease-gh-rel.yml  autorelease-prep.yml  tests.yaml
ticgithub/: __init__.py  authorizable.py  bot.py  build.py  emailcleaners.py  gmail.py  inbox.py  issues.py
ticgithub/data/workflows/: assignment-to-gmail.yml  scheduled_workflow.yml
ticgithub/tasks/: authorization_check.py  core.py  reminder_task.py  task.py
ticgithub/tests/: test_bot.py  test_emailcleaners.py  utils.py
ticgithub/tests/data/: mockremindertemplate.txt
ticgithub/tests/tasks/: test_reminder_task.py
ticgithub/utils/: datafiles.py
