[metadata]
name = ticgithub
version = 0.0.1.dev0
# version should end in .dev0 if this isn't to be released
short_description = Use GitHub as a ticketing system for shared GMail
description = Use GitHub as a ticketing system for shared GMail 
long_description = file: README.md
long_description_content_type = text/markdown
author = David W.H. Swenson
author_email = dwhs@hyperblazer.net
license = MIT
url = https://github.com/dwhswenson/dwhswenson
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
    pyyaml
    pygithub
packages = find:
